--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,23 @@
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
     </dependency>
-    <!--<dependency>-->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <version>1.5.3.RELEASE</version>
+      <scope>test</scope>
+    </dependency>
+      <dependency>
+          <groupId>lee</groupId>
+          <artifactId>carelee</artifactId>
+          <version>1.0-SNAPSHOT</version>
+      </dependency>
+      <!--<dependency>-->
       <!--<groupId>org.springframework.boot</groupId>-->
       <!--<artifactId>spring-boot-starter-web</artifactId>-->
       <!--<exclusions>-->
@@ -68,6 +84,16 @@
     <!--</dependency>-->
     <!-- The spring-boot-devtools module can be included in any project to
         provide additional development-time features -->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.7</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.2</version>
+    </dependency>
   </dependencies>
   <!-- Package as an executable jar -->
   <build>
