--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
-spring.datasource.url=jdbc:mysql://39.106.165.224:3306/care?characterEncoding=utf-8&useSSL=false
-spring.datasource.username=lkx
-spring.datasource.password=lkx
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#指定加载配置环境
+spring.profiles.active=prod
 spring.jpa.generate-ddl = true
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 # Specify the DBMS
 spring.jpa.database = MYSQL
 # Show or not log for each sql query
 spring.jpa.show-sql = true
 #spring自定义小图标
 spring.mvc.favicon.enabled = false
+#seed
+http = https://movie.douban.com/
