增加jpa复杂查询

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 #指定加载配置环境
-spring.profiles.active=prod
+spring.profiles.active=dev
 spring.jpa.generate-ddl = true
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.format_sql = true
 # Specify the DBMS
 spring.jpa.database = MYSQL
 # Show or not log for each sql query
@@ -10,4 +11,14 @@ spring.jpa.show-sql = true
 #spring自定义小图标
 spring.mvc.favicon.enabled = false
 #seed
-http = https://movie.douban.com/
+#http = https://movie.douban.com/
+#我的淘宝账户userId
+#tbk.userId = 1885932134
+#淘宝客appkey
+#tbk.appkey = 24761544
+#淘宝客appSecret
+#tbk.appSecret = c17cfac642449d94c9a1c5dbf20dfec9
+spring.rabbitmq.addresses=39.106.165.224:5672
+spring.rabbitmq.username=user_admin
+spring.rabbitmq.password=passwd_admin
+spring.rabbitmq.virtual-host=test
