--- a/pom.xml
+++ b/pom.xml
@@ -58,11 +58,6 @@
       <version>1.5.3.RELEASE</version>
       <scope>test</scope>
     </dependency>
-      <dependency>
-          <groupId>lee</groupId>
-          <artifactId>carelee</artifactId>
-          <version>1.0-SNAPSHOT</version>
-      </dependency>
       <!--<dependency>-->
       <!--<groupId>org.springframework.boot</groupId>-->
       <!--<artifactId>spring-boot-starter-web</artifactId>-->
@@ -93,6 +88,18 @@
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
       <version>4.5.2</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.springframework.amqp/spring-rabbit -->
+    <dependency>
+      <groupId>org.springframework.amqp</groupId>
+      <artifactId>spring-rabbit</artifactId>
+      <version>1.7.5.RELEASE</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>2.9.0</version>
     </dependency>
   </dependencies>
   <!-- Package as an executable jar -->
