--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/care?characterEncoding=utf-8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=19950811
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+server.additional-ports =
