--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,16 @@
       <artifactId>jedis</artifactId>
       <version>2.9.0</version>
     </dependency>
+    <!--Netty -->
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
+      <version>4.1.12.Final</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-websocket</artifactId>
+    </dependency>
   </dependencies>
   <!-- Package as an executable jar -->
   <build>
