--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,12 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-websocket</artifactId>
     </dependency>
+    <!-- 签名验证 -->
+    <dependency>
+      <groupId>com.auth0</groupId>
+      <artifactId>java-jwt</artifactId>
+      <version>3.2.0</version>
+    </dependency>
   </dependencies>
   <!-- Package as an executable jar -->
   <build>
