--- a/pom.xml
+++ b/pom.xml
@@ -58,27 +58,11 @@
       <version>1.5.3.RELEASE</version>
       <scope>test</scope>
     </dependency>
-      <!--<dependency>-->
-      <!--<groupId>org.springframework.boot</groupId>-->
-      <!--<artifactId>spring-boot-starter-web</artifactId>-->
-      <!--<exclusions>-->
-        <!--<exclusion>-->
-          <!--<artifactId>log4j-over-slf4j</artifactId>-->
-          <!--<groupId>org.slf4j</groupId>-->
-        <!--</exclusion>-->
-        <!--<exclusion>-->
-          <!--<groupId>org.springframework.boot</groupId>-->
-          <!--<artifactId>spring-boot-starter-tomcat</artifactId>-->
-        <!--</exclusion>-->
-      <!--</exclusions>-->
-    <!--</dependency>-->
     <!--<dependency>-->
       <!--<groupId>org.springframework.boot</groupId>-->
       <!--<artifactId>spring-boot-starter-tomcat</artifactId>-->
       <!--<scope>provided</scope>-->
     <!--</dependency>-->
-    <!-- The spring-boot-devtools module can be included in any project to
-        provide additional development-time features -->
     <dependency>
       <groupId>com.alibaba</groupId>
       <artifactId>fastjson</artifactId>
@@ -116,6 +100,11 @@
       <groupId>com.auth0</groupId>
       <artifactId>java-jwt</artifactId>
       <version>3.2.0</version>
+    </dependency>
+    <!--redis -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-redis</artifactId>
     </dependency>
   </dependencies>
   <!-- Package as an executable jar -->
