--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #指定加载配置环境
 server.port=8089
-spring.profiles.active=dev
+spring.profiles.active=prod
 spring.jpa.generate-ddl = true
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
