修改后台登录 增加token验证
1.很久没写前后端不分离的东西,有点忘了,把坑填好了,后面好写了
2.token验证比较简单,只是对session验证

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #指定加载配置环境
 server.port=8089
-spring.profiles.active=dev
+spring.profiles.active=prod
 logging.level.root=info
 spring.jpa.generate-ddl = true
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
@@ -24,5 +24,6 @@ spring.rabbitmq.addresses=39.106.165.224:5672
 spring.rabbitmq.username=user_admin
 spring.rabbitmq.password=passwd_admin
 spring.rabbitmq.virtual-host=test
-spring.mvc.view.prefix=/X-admin/
-spring.mvc.view.suffix=.*
+# 定位页面的目录到static/下
+spring.mvc.view.prefix=/
+spring.mvc.view.suffix=.html
