--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #指定加载配置环境
 server.port=8089
 spring.profiles.active=prod
-logging.level.root=info
+logging.level.root= info
 spring.jpa.generate-ddl = true
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
@@ -24,6 +24,8 @@ spring.rabbitmq.addresses=39.106.165.224:5672
 spring.rabbitmq.username=user_admin
 spring.rabbitmq.password=passwd_admin
 spring.rabbitmq.virtual-host=test
-# 定位页面的目录到static/下
-spring.mvc.view.prefix=/
-spring.mvc.view.suffix=.html
+# 定位页面的目录
+spring.mvc.view.prefix=/pages/
+spring.mvc.view.suffix=.jsp
+spring.devtools.restart.enabled= true
+server.jsp-servlet.init-parameters.development=true
