--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,25 @@
       <artifactId>java-jwt</artifactId>
       <version>3.2.0</version>
     </dependency>
+      <!--jsp-->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jstl</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+    </dependency>
+    <!-- -->
+    <dependency>
+      <groupId>org.apache.tomcat.embed</groupId>
+      <artifactId>tomcat-embed-jasper</artifactId>
+    </dependency>
+      <dependency>
+          <groupId>org.bouncycastle</groupId>
+          <artifactId>bcprov-jdk16</artifactId>
+          <version>1.46</version>
+      </dependency>
     <!--redis -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
