--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,4 +30,5 @@ spring.mvc.view.suffix=.jsp
 spring.devtools.restart.enabled= true
 server.jsp-servlet.init-parameters.development=true
 spring.devtools.livereload.port=35730
-size=2
+# ∑÷“≥size
+size=5
