累死累活手动写了个分页,最后发现LayUi有自带,果断用了自带的
1.add 其实我的分页也挺好看,就是复用性极差哈哈哈,在member-list,被我注释了,解开封印即可食用
2.add 增加评论列表

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,5 +30,5 @@ spring.mvc.view.suffix=.jsp
 spring.devtools.restart.enabled= true
 server.jsp-servlet.init-parameters.development=true
 spring.devtools.livereload.port=35730
-# 分页size
+# 会员分页size
 size=5
