--- a/pom.xml
+++ b/pom.xml
@@ -21,12 +21,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
 
   <name>carelee</name>
   <groupId>lee</groupId>
   <artifactId>carelee</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -147,27 +147,31 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-devtools</artifactId>
       <optional>true</optional>
-      <scope>true</scope>
+      <scope>compile</scope>
     </dependency>
   </dependencies>
   <!-- Package as an executable jar -->
   <build>
     <plugins>
+      <!-- compiler -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-war-plugin</artifactId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.5</version>
         <configuration>
-          <warName>carelee</warName>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-                <source>8</source>
-                <target>8</target>
-            </configuration>
-        </plugin>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <!--打包只能用1.4.2.RELEASE 版本的，其它版本的都不可以。这个目前是springboot的bug。目前还未看到官方的解说。-->
+        <version>1.4.2.RELEASE</version>
+        <configuration>
+          <mainClass>lee.Carelee</mainClass>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
@@ -177,6 +181,31 @@
         </configuration>
       </plugin>
     </plugins>
+    <resources>
+      <!-- 打包时将jsp文件拷贝到META-INF目录下-->
+      <resource>
+        <!-- 指定resources插件处理哪个目录下的资源文件 -->
+        <directory>src/main/webapp</directory>
+        <!--注意此次必须要放在此目录下才能被访问到-->
+        <targetPath>META-INF/resources</targetPath>
+        <includes>
+          <include>**/**</include>
+        </includes>
+      </resource>
+      <resource>
+        <directory>src/main/resources</directory>
+        <includes>
+          <include>**/**</include>
+        </includes>
+        <filtering>false</filtering>
+      </resource>
+      <resource>
+        <directory>src/main/java</directory>
+        <excludes>
+          <exclude>**/*.java</exclude>
+        </excludes>
+      </resource>
+    </resources>
   </build>
 
 </project>
